# shell-mcp-server

./: .gitignore  Caddyfile  Dockerfile.linux  Dockerfile.windows  README.md  config.toml  pyproject.toml  test.py
.github/workflows/: cross-platform.yml
src/shell_mcp_server/: config.py  execution_policy.py  executor.py  mcp_utils.py  models.py  os_utils.py  path_utils.py  server.py  shell_execution.py  tmux_commands.py  tool_handlers.py  utils.py
src/shell_mcp_server/platform_adapters/: __init__.py  posix.py  windows.py
tests/: conftest.py  test_config.py  test_cross_platform.py  test_injection_protection.py  test_path_utils.py  test_server.py
