[project]
name = "shell-mcp-server"
version = "0.1.3"
description = "Shell MCP Server for Claude AI Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastmcp>=3.0.0",
    "toml>=0.10.0",
]

[[project.authors]]
name = "blazickjp"
email = "joe.blazick@yahoo.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
shell-mcp-server = "shell_mcp_server:main"

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1.0"]
