[project]
name = "shell-mcp-server"
version = "0.1.3"
description = "Shell MCP Server for Claude AI Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastmcp[tasks]>=3.0.0",
    "toml>=0.10.0",
]

# [tool.hatch.build.targets.wheel]
# packages = ["shell_mcp_server"]

[tool.hatch.build.targets.wheel.force-include]
"config.toml" = "shell_mcp_server/config.toml"
"README.md" = "shell_mcp_server/README.md"

[tool.hatch.build.targets.sdist]
include = ["/config.toml", "README.md"]


[[project.authors]]
name = "waxz1992"
email = "waxz1992@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
shell-mcp-server = "shell_mcp_server:main"

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1.0"]
